project2_model_api_service.yml
apiVersion: v1
kind: Service
metadata:
  name: project2-model-api-service
  labels:
    app: project2-model-api
spec:
  type: ClusterIP
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
    name: http
  selector:
    app: project2-model-api
